<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/ip_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/input_label"
                android:textSize="30sp" />

            <EditText
                android:id="@+id/ip_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                tools:ignore="SpeakableTextPresentCheck" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/submit_button"
                android:textColor="#000000" />

            <Button
                android:id="@+id/reset_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/darker_gray"
                android:text="@string/reset_button"
                android:textColor="#000000" />

            <TextView
                android:id="@+id/error"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#F44336"
                android:visibility="invisible" />

            <TableLayout
                android:id="@+id/results"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="invisible">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/continent_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/continent"
                        android:visibility="visible" />

                    <TextView
                        android:id="@+id/continent"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/country_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/country" />

                    <TextView
                        android:id="@+id/country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/country_capital_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/country_capital" />

                    <TextView
                        android:id="@+id/country_capital"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/country_flag_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/country_flag" />

                    <ImageView
                        android:id="@+id/country_flag"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:visibility="visible" />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/state_prov_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/state" />

                    <TextView
                        android:id="@+id/state_prov"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/city_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/city" />

                    <TextView
                        android:id="@+id/city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/district_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/district" />

                    <TextView
                        android:id="@+id/district"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/zipcode_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/zipcode" />

                    <TextView
                        android:id="@+id/zipcode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/isp_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/isp" />

                    <TextView
                        android:id="@+id/isp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/organization_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/organization" />

                    <TextView
                        android:id="@+id/organization"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/latitude_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/latitude" />

                    <TextView
                        android:id="@+id/latitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:visibility="visible" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/longitude_label"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/longitude" />

                    <TextView
                        android:id="@+id/longitude"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:visibility="visible" />
                </TableRow>

            </TableLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>